--- a/CNN-Brain_Tumor-Dieine-Br35H-CNN-Keras3.ipynb
+++ b/CNN-Brain_Tumor-Dieine-Br35H-CNN-Keras3.ipynb
@@ -492,9 +492,9 @@
     "* Primeiro for que alterna entre as pastas:0-normal ou 1-com tumor.\n",
     "* Segundo for percorre as imagens;\n",
     "* Operação de pré-processamento realizada: redimensionamento das imagens;\n",
-    "* Array das imagens (np.array);\n",
-    "* Adiciona Imagem no vetor;\n",
-    "* Adiciona classes no vetor;\n",
+    "* Lista das imagens;\n",
+    "* Adiciona Imagem na lista;\n",
+    "* Adiciona classes na lista;\n",
     "* Normalização: garantindo que cada parâmetro de entrada (pixel) tenha uma distribuição de dados semelhante tornando a convergência mais rápida dutante o treinamento da rede."
    ]
   },
