--- a/CNN-Brain_Tumor-Dieine-Br35H-CNN-Model.ipynb
+++ b/CNN-Brain_Tumor-Dieine-Br35H-CNN-Model.ipynb
@@ -488,13 +488,13 @@
     "# DataLoader - Leitura das Imagens e Classes\n",
     "\n",
     "* Download das imagens através do caminho do dataset em disco rígido;\n",
-    "* Criação dos vetores para as imagens x e para as classes y;\n",
+    "* Criação das listas para as imagens x e para as classes y;\n",
     "* Primeiro for que alterna entre as pastas:0-normal ou 1-com tumor.\n",
     "* Segundo for percorre as imagens;\n",
     "* Operação de pré-processamento realizada: redimensionamento das imagens;\n",
-    "* Lista das imagens;\n",
-    "* Adiciona Imagens na lista;\n",
-    "* Adiciona classes na lista;\n",
+    "* Vetor das imagens (np.array);\n",
+    "* Adiciona Imagens (np.array);\n",
+    "* Adiciona classes  (np.array);\n",
     "* Normalização: garantindo que cada parâmetro de entrada (pixel) tenha uma distribuição de dados semelhante.tornando a convergência mais rápida dutante o treinamento da rede."
    ]
   },
